Update federated IT tests
move non-federates specific tests to graph tests